womtool/src/test/resources/validate/wdl_draft2/invalid/unexpected_subworkflow_call_input_failure/unexpected_subworkflow_call_input_failure_import.wdl
workflow subwf {
  Int i = 5
  Int j = i + 1000

  output {
    Int k = j
  }
}
